binrw/tests/ui/unsupported_type_enum.stderr
error: null enums are not supported
 --> $DIR/unsupported_type_enum.rs:5:1
  |
5 | enum Foo {}
  | ^^^^^^^^^^^

error: null enums are not supported
 --> $DIR/unsupported_type_enum.rs:8:1
  |
8 | enum Bar {}
  | ^^^^^^^^^^^
